cosc360-rsvp/client/src/css/adminAnalytics.css
.page-title {
    font-family: 'Inter', sans-serif;
    margin: 18px 24px;
}

.section-header {
    margin: 16px;
    color: rgb(80, 80, 80);
}

.analytics-section {
    padding: 0 1.5rem 2rem 1.5rem;
}

.analytics-main-cards {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
    gap: 24px;
}

.main-cards-details {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;
    background-color: rgb(252, 254, 255);
    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
    border-radius: 14px;
    padding: 16px;
}

.details-statistic {
    font-family: 'Inter', sans-serif;
    font-size: 5vh;
    text-align: center;
}

.details-statistic-word {
    font-family: 'Inter', sans-serif;
    font-size: 3.5vh;
    text-align: center;
}

.details-name {
    text-align: center;
}

.charts-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 24px;
}

.chart-card {
    background-color: rgb(252, 254, 255);
    border-radius: 14px;
    padding: 20px;
    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
}

